--- a/JS/index.html
+++ b/JS/index.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link rel="stylesheet" href="css/style.css"/>
-		<title>JavaScript</title>
-	</head>
-	
-	<script src="js/script.js"></script>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="css/style.css"/>
 
-	<body>
-		<div class="wrap">
-			<div class="karkas">
-			<h1>JavaScript</h1>
-			
-			<script>
-			
-				var a = 20;
-				
-			</script>
-			
-			<input type="button" value="OK" onClick="alert(i + a)">
-			
-			<a href="javascript:new Date().toLocaleTimeString()">Ссылка</a>
-			</div>    	
-		</div>
-	</body>
+    <title>JavaScript</title>
+</head>
+
+
+
+<body>
+<div class="wrap">
+    <div id="karkas" class="karkas">
+        <h1>JavaScript</h1>
+    </div>
+</div>
+
+<script src="js/script.js"></script>
+</body>
+
 </html>
