--- a/JS/index.html
+++ b/JS/index.html
@@ -10,6 +10,7 @@
     <div class="wrap">
         <div id="karkas" class="karkas">
             <h1>JavaScript</h1>
+            <div style="font-size: 2em; align: center" id="clock"></div>
         </div>
     </div>
 </body>
