--- a/JS/index.html
+++ b/JS/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrap">
         <div id="karkas" class="karkas">
-            <h1>JavaScript</h1>
+            <h1>Hello, I am learning JavaScript</h1>
             <div style="font-size: 2em; align: center" id="clock"></div>
         </div>
     </div>
